# actix-workshop

./: .env  Cargo.toml  README.md
migrations/2019-06-22-213309_create_contacts/: down.sql  up.sql
src/: lib.rs  middleware.rs  model.rs  schema.rs  test.rs  util.rs
src/api/: contacts.rs  mod.rs  warmup.rs
static/: index.html
