[package]
name = "actix-web-workshop"
version = "0.1.0"
authors = ["Tglman <tglman@tglman.com>"]
edition = "2018"


[lib]
name = "workshop"
path = "src/lib.rs"


[[bin]]
name = "workshop-server"
path = "src/bin/main.rs"

[dependencies]
actix-web="1.0"
serde = "1.0"
serde_derive = "1.0"
env_logger = "*"
futures = "0.1"
rand = "0.6.5"
actix-service = "0.4.1"
actix-files = "0.1" 
diesel = { version = "1.3", features = ["sqlite", "r2d2","postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.14.1"



[dev-dependencies]
actix-http-test = "0.2"
actix-http = "0.2"
serde_json = "1.0"


